Refactoring RandomMaterial generation and rename RandomMaterial to RequiredResource and added maven profiles